--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,3 +66,11 @@ a:hover {
 .inlineBlock {
   display: block;
 }
+
+.wscn-icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
