--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -3,3 +3,11 @@
   width: 100%;
   height: 100%;
 }
+
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
