ECharts插件，完成柱状图

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,3 +75,14 @@ a:hover {
   fill: currentColor;
   overflow: hidden;
 }
+
+.clearfix {
+  &:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+  }
+}
