插件的学习，install

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./mixin.scss";
+@import './element-ui.scss';
 @import "./btn.css";
 
 body {
@@ -85,4 +86,18 @@ a:hover {
     clear: both;
     height: 0;
   }
+}
+
+//main-container全局样式
+.app-container {
+  padding: 20px;
+}
+
+.components-container {
+  margin: 30px 50px;
+  position: relative;
+}
+
+.pagination-container {
+  margin-top: 30px;
 }
